--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "repository": "",
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
-    "async": "~0.2.8",
     "express": "~3.2.4",
-    "socket.io": "~0.9.14"
+    "knex": "^0.12.6",
+    "pg": "^6.1.0"
   }
 }
